--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,5 +26,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/mcp-forwarder:${{ github.ref_name }}
-            ghcr.io/${{ github.repository_owner }}/mcp-forwarder:latest
+            ghcr.io/takch02/mcp-forwarder:${{ github.ref_name }}
+            ghcr.io/takch02/mcp-forwarder:latest
