--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     environment:
       MCP_LOG_INGEST_URL: "${MCP_LOG_INGEST_URL}"  # LOG 수집용 URL
       MCP_METRIC_INGEST_URL: "${MCP_METRIC_INGEST_URL}"  # METRIC 수집용 URL
+      USER_KAKAO_TOKEN: "${USER_KAKAO_TOKEN}"
       MCP_TOKEN: "${INGEST_TOKEN}"
       LOG_PATH: "/logs/application.log"
       START_AT_END: "true"
