--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     environment:
       MCP_LOG_INGEST_URL: "${MCP_LOG_INGEST_URL}"  # LOG 수집용 URL
       MCP_METRIC_INGEST_URL: "${MCP_METRIC_INGEST_URL}"  # METRIC 수집용 URL
+      MCP_HEALTH_INGEST_URL: "${MCP_HEALTH_INGEST_URL}"  # HEALTH 수집용 URL
+      HEALTH_URL: "${HEALTH_URL}"  # 헬스 체크 대상 URL
       DISCORD_WEBHOOK_URL: "${DISCORD_WEBHOOK_URL}"  # 디스코드 웹훅 URL 헤더 (선택사항)
       MCP_TOKEN: "${INGEST_TOKEN}"
       LOG_PATH: "/logs/application.log"
